--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,13 @@ dependencies {
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.4.2'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.4.2'
-    implementation group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.0-api', version: '1.0.1.Final'
     implementation group: 'org.springframework', name: 'spring-orm', version: '5.3.3'
+
+
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.2'
+    implementation group: 'org.springframework.security', name: 'spring-security-taglibs', version: '5.4.2'
+    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.4.2'
+
 
 
 
