--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/jeonbiseodb?serverTimezone=Asia/Seoul
-    username: root
+    username: user
     password: 1234
 
   jpa:
