--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "chart.js": "^3.0.2",
     "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
     "run": "^1.4.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
