--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/jeonbiseodb?serverTimezone=Asia/Seoul
-    username: root
-    password: 1717
+    username: user
+    password: 1234
 
   jpa:
     open-in-view: true
