controller log 구축

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,7 @@ spring:
   jackson:
     serialization:
       fail-on-empty-beans: false
+
+logging:
+  file:
+    path: C:\Users\Kang\springproject\jeonbiseo\log
