--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
     // https://mvnrepository.com/artifact/javax.validation/validation-api
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-
+    // https://mvnrepository.com/artifact/net.sf.supercsv/super-csv
+    implementation group: 'net.sf.supercsv', name: 'super-csv', version: '2.4.0'
 
 
 
