--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/jeonbiseodb?serverTimezone=Asia/Seoul
-    username: user
-    password: 1234
+    url:  ${db.url}
+    username: ${db.username}
+    password: ${db.password}
 
   jpa:
     open-in-view: true
