로그 패스 설정
환경변수 log.path 설정 요망

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,9 @@ spring:
       fail-on-empty-beans: false
 
 logging.level.org.springframework.data.elasticsearch.client.WIRE: trace
+
+logging:
+  file:
+    path: ${log.path}
+  config:
+    classpath: logback-spring.xml
